# utils

./: .gitignore  EfCleaner.py  README.md  archiver.py  template.py  test_archiver.py
Adoc2Docx/: Adoc2Docx.py  Readme.adoc  highlightjs.py  test_Adoc2Docx.py
Adoc2Docx/test/: my_adoc_sample.adoc  my_adoc_sample_hightlihgts.adoc
AutoHotKey/: SuperMemo18.ahk  hello.ahk
CPP/: CPP.code-workspace
CPP/OpensslSample/: CMakeLists.txt  QxCrypt.cpp  QxCrypt.h  TestQxCrypt.cpp
CPP/OpensslSample/test_data/: 2048_priv.pem  2048_pub.pem  decrypted.txt  encrypted.txt
CSharp/: CsTools.code-workspace
CSharp/Asciidoc2Markdown/: Asciidoc2Markdown.csproj  Program.cs
CSharp/Asciidoc2MarkdownTest/: Asciidoc2MarkdownTest.csproj  UnitTest1.cs
CppVs/: CppVs.sln
CtTemp/: CtTemp.py  UiCtTemp.py  pyinstaller.help  test_CtTemp.py
EfCleaner/: EfCleaner.py  testEfCleaner.py
EnglishReview/: EnglishReview.py  index.txt  out.txt  test_EnglishReview.py
GitMigration/: GitMigration.py  index.html  test_GitMigration.py
Java/: .gitignore  AgileJava进度.xlsx
PythonTools/: PythonTools.code-workspace
Rename/: Rename.py  test_Rename.py
Template/: LogTools.py  Template.py  TemplateArgs.py
XmlMerge/: XmlMerge.py  test_XmlMerge.py
archiver/: archiver.py  test_archiver.py
bash/: git_clean.sh
generateFiles/: generateFiles.py
gui/: hello.py
libreoffice_python_macro/: .~lock.SSP_Role_Sample.ods#  Agenda.py  HelloWorld.py  ReadMe.adoc  SSP_Role_Sample.ods
multiThread/: Worker.py  test.py  test_Worker.py
zhengma/: editlevel2.sh  level2.py  levelRandom.py  run.sh
(+217 files in other folders)
